--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/Principal.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/Principal.tex
@@ -92,21 +92,10 @@
    % ---------------------------------------------------------------
    % Apêndice A
    % ---------------------------------------------------------------
-   \chapter{O que é um apêndice}
+   \chapter{Outros resultados}
    \label{ApendiceA}
    \input{ApendiceA}
-   % ---------------------------------------------------------------
-   % Apêndice B
-   % ---------------------------------------------------------------
-   \chapter{Encadernação do Projeto de Graduação}
-   \label{ApendiceB}
-   \input{ApendiceB}
-   % ---------------------------------------------------------------
-   % Apêndice C
-   % ---------------------------------------------------------------
-   \chapter{O que é um anexo}
-   \label{ApendiceC}
-   \input{ApendiceC}   
+   % 
 
 \backmatter
 
