--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/cap5.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/cap5.tex
@@ -267,7 +267,7 @@
 				
 				\includegraphics[width=\textwidth]{rmse_val_set_t1.jpg}
 				
-				\caption[\small{RMSE pelo número de neurônios no conjunto de validação.}]{\label{mseValT1} \small{RMSE pelo número de neurônios no conjunto de validação.}}
+				\caption[\small{RMSE pelo número de neurônios no conjunto de validação.}]{\label{rmseValT1} \small{RMSE pelo número de neurônios no conjunto de validação.}}
 				
 			\end{center}
 		}	
@@ -283,7 +283,7 @@
 				
 				\includegraphics[width=\textwidth]{rmse_test_set_t1.jpg}
 				
-				\caption[\small{RMSE pelo número de neurônios no conjunto de teste.}]{\label{mseTestT1} \small{RMSE pelo número de neurônios no conjunto de teste.}}
+				\caption[\small{RMSE pelo número de neurônios no conjunto de teste.}]{\label{rmseTestT1} \small{RMSE pelo número de neurônios no conjunto de teste.}}
 				
 			\end{center}
 		}	
@@ -466,8 +466,7 @@
 	\end{center}	
 \end{figure}
 
-
-\paragraph{}A tabela com os dados utilizados para a seleção do do modelo, os gráficos de convergência e a de cada modelos estão presente nos apêndices A e B respectivamente. Além disso, o gráfico com a comparação do sinal previsto com o resíduo original pode ser visto no apêndice C.
+\paragraph{}A tabela com os dados utilizados na seleção de cada modelo, o gráfico de convergência e os resultados obtidos  estão presente nos apêndice A.
 
 \paragraph{}Assim como o esperado, tanto o erro quanto o desvio padrão aumentam com o número de passos a frente, salvo algumas exceções. Sendo assim, a previsão para muitos passo a frente traz um risco maior para a análise. Cabe a quem for usar mensurar quanto de risco pode ser tolerado baseado nesses gráficos.
 
